minor update to model text

--- a/MODEL.tex
+++ b/MODEL.tex
@@ -8,9 +8,9 @@
 & N, E, E^R, G, D, H, R - \mbox{index sets} \nonumber \\ 
 & \bm {v^l}_i, \bm {v^u}_i \in \mathbb{R} \;\; \forall i \in N - \mbox{voltage limits} \nonumber \\
 & \bm {S^{gl}}_k, \bm {S^{gu}}_k \in \mathbb{C} \;\; \forall k \in G - \mbox{power generation limits} \nonumber \\
-& \bm c_{2k}, \bm c_{1k}, \bm c_{0k} \in \mathbb{R} \;\; \forall k \in G - \mbox{power generation costs} \nonumber \\
-& \bm S^d_k \in \mathbb{C} \;\; \forall k \in D - \mbox{power demand and shunt parameters} \nonumber \\
-& \bm Y^s_k \in \mathbb{C} \;\; \forall k \in H - \mbox{shunt parameters} \nonumber \\
+& \bm c_{2k}, \bm c_{1k}, \bm c_{0k} \in \mathbb{R} \;\; \forall k \in G - \mbox{power generation cost parameters} \nonumber \\
+& \bm S^d_k \in \mathbb{C} \;\; \forall k \in D - \mbox{power demands} \nonumber \\
+& \bm Y^s_k \in \mathbb{C} \;\; \forall k \in H - \mbox{shunt properties} \nonumber \\
 & \bm Y_{ij}, \bm Y^c_{ij}, \bm Y^c_{ji}, \bm{T}_{ij} \in \mathbb{C} \;\; \forall (i,j) \in E - \mbox{power line properties} \nonumber \\
 & \bm {s^u}_{ij}, \bm {\theta^{\Delta l}}_{ij}, \bm {\theta^{\Delta u}}_{ij} \in \mathbb{R} \;\; \forall (i,j) \in E - \mbox{power line limits} \nonumber \\
 %
